syntax = "proto3";
package corepb.v1;

option go_package = "./;corepbv1";

message BroadcastFilter {
    string user_id = 1;
}

message BroadcastEvent {
    BroadcastFilter filter = 1;
    bytes data = 2;
}

